# typename

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
src/: typename.py
src/typename/: __init__.py
tests/: test_typename.py
