[metadata]
name = typename
version = attr: typename.__version__
description = Obtain the name of the type of an object
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sixty-north/typename
author = Sixty North
author_email: systems+typename@sixty-north.com
keywords = Python types typename
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:

[options.extras_require]
dev = bumpversion; build; twine
test = pytest

[options.packages.find]
where = src